examples/invalid/comment-bad-event-role/src/go/broken/broken.go
package broken

// @event.id order.placed
// @event.role random
// @event.domain billing
func Handle() {}
